--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -33,7 +33,7 @@
         <ul>
           <li class="list-title">${_("Connect")}</li>
           <li>
-            <a href="#!">${_("Contact")}</a>
+            <a href="${marketing_link('CONTACT')}">${_("Contact")}</a>
           </li>
           <li>
             <a href="https://twitter.com/mitopenlearning?lang=en" target="_blank">${_("Twitter")}</a>
