--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -5,6 +5,9 @@
 <%block name="pagetitle">${_("About")}</%block>
 
 <main id="main" aria-label="Content" tabindex="-1">
+	<div class="page-header">
+		page header
+	</div>
     <section class="container about">
         <h1>
             <%block name="pageheader">${page_header or _("About Page")}</%block>
@@ -12,5 +15,48 @@
         <p>
             <%block name="pagecontent">${page_content or _("This page left intentionally blank. Feel free to add your own content.")}</%block>
         </p>
+
+        <h3>Frequently Asked Questions</h3>
+  <button id="btn_expand_faqs" class="btn btn-outline-primary">Expand All</button>
+  <button id="btn_minimise_faqs" class="btn btn-outline-primary">Minimise All</button>
+
+  <div class="accordion">
+    <div class="item">
+      <div class="accordion-title">Q. I’m having problems viewing the course. Could it be my browser?</div>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis laudantium et, cumque neque maxime. Aspernatur voluptates officia perspiciatis vitae, tenetur veritatis quibusdam illum quasi. Laborum maiores, aut sapiente non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab recusandae quae corporis ipsum officia cupiditate sequi minima totam perferendis fugit necessitatibus earum.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="accordion-title">Q. What software do I need for this course?</div>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis laudantium et, cumque neque maxime. Aspernatur voluptates officia perspiciatis vitae, tenetur veritatis quibusdam illum quasi. Laborum maiores, aut sapiente non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab recusandae quae corporis ipsum officia cupiditate sequi minima totam perferendis fugit necessitatibus earum.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="accordion-title">Q. What does it mean that the course materials are open?</div>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis laudantium et, cumque neque maxime. Aspernatur voluptates officia perspiciatis vitae, tenetur veritatis quibusdam illum quasi. Laborum maiores, aut sapiente non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab recusandae quae corporis ipsum officia cupiditate sequi minima totam perferendis fugit necessitatibus earum.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="accordion-title">Q. Is there a required textbook for this course?</div>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis laudantium et, cumque neque maxime. Aspernatur voluptates officia perspiciatis vitae, tenetur veritatis quibusdam illum quasi. Laborum maiores, aut sapiente non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab recusandae quae corporis ipsum officia cupiditate sequi minima totam perferendis fugit necessitatibus earum.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="accordion-title">Q. Can I adopt these materials for my course, at another instution?</div>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis laudantium et, cumque neque maxime. Aspernatur voluptates officia perspiciatis vitae, tenetur veritatis quibusdam illum quasi. Laborum maiores, aut sapiente non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab recusandae quae corporis ipsum officia cupiditate sequi minima totam perferendis fugit necessitatibus earum.</p>
+      </div>
+    </div>
+  </div>
+
     </section>
 </main>
