--- a/mitx/lms/static/sass/features/_learner-profile.scss
+++ b/mitx/lms/static/sass/features/_learner-profile.scss
@@ -49,6 +49,10 @@
 
                         select {
                             height: 40px;
+
+                            &:disabled {
+                                opacity: .5;
+                            }
                         }
                     }
 
