--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -29,11 +29,14 @@
               <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
             </li>
             % endfor
+            <li>
+              <a href="mailto: mitoll-support@mit.edu">${_("Help")}</a>
+            </li>
         </ol>
         <ul>
           <li class="list-title">${_("Connect")}</li>
           <li>
-            <a href="${marketing_link('CONTACT')}">${_("Contact")}</a>
+            <a href="mailto: mitoll-support@mit.edu">${_("Contact")}</a>
           </li>
           <li>
             <a href="https://twitter.com/mitopenlearning?lang=en" target="_blank">${_("Twitter")}</a>
