--- a/mitx/lms/templates/header/navbar-authenticated.html
+++ b/mitx/lms/templates/header/navbar-authenticated.html
@@ -82,7 +82,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       </div>
     % endif
     <div class="mobile-nav-item hidden-mobile nav-item">
-      <a class="help-link" href="javascript:void(0);">${_("Help Center")}</a>
+      <a class="help-link" href="mailto: mitoll-support@mit.edu">${_("Help")}</a>
     </div>
     <%include file="user_dropdown.html"/>
   </div>
