--- a/mitx/lms/templates/static_templates/privacy.html
+++ b/mitx/lms/templates/static_templates/privacy.html
@@ -6,7 +6,7 @@
 <%block name="pagetitle">${_("Privacy Policy")}</%block>
 
 <main id="main" aria-label="Content" tabindex="-1">
-    <section class="container about">
+    <section class="container">
         <h1>
             <%block name="pageheader">${page_header or _("Privacy Policy")}</%block>
         </h1>
