--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -20,34 +20,12 @@ from six import text_type
   allow_public_account_creation = static.get_value('ALLOW_PUBLIC_ACCOUNT_CREATION', settings.FEATURES.get('ALLOW_PUBLIC_ACCOUNT_CREATION'))
 %>
 <nav class="nav-links" aria-label=${_("Supplemental Links")}>
-  <div class="main">
-  % if mktg_site_enabled:
-    <div class="mobile-nav-item hidden-mobile nav-item">
-      <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
-    </div>
-    % if courses_are_browsable:
-      <div class="mobile-nav-item hidden-mobile nav-item">
-        <a href="${marketing_link('COURSES')}">${_("Courses")}</a>
-      </div>
-    % endif
-    <div class="mobile-nav-item hidden-mobile nav-item">
-      <a href="${marketing_link('SCHOOLS')}">${_("Schools")}</a>
-    </div>
-  % endif
-  % if allows_login:
-    % if can_discover_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item">
-        <a href="/courses">${_('Explore courses')}</a>
-      </div>
-    %endif
-  % endif
-  </div>
   <div class="secondary">
     <div>
       <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
           <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
-          <li><a href="${marketing_link('CONTACT')}">${_("Contact")}</a></li>
+          <li><a href="mailto: mitoll-support@mit.edu">${_("Contact")}</a></li>
       </ul>
       % if allows_login:
         % if restrict_enroll_for_course:
