--- a/mitx/lms/static/sass/features/_learner-profile.scss
+++ b/mitx/lms/static/sass/features/_learner-profile.scss
@@ -124,9 +124,11 @@
                     padding-bottom: 0;
 
                     .wrapper-profile-section-container-one {
-                        @include padding-right($baseline*0.75);
-                        @include margin-right($baseline*0.75);
-                        width: 35%;
+                        @include media-up(sm) {
+                            @include padding-right($baseline*0.75);
+                            @include margin-right($baseline*0.75);
+                            width: 35%;
+                        }
 
                         .wrapper-profile-section-one {
                             border: none;
@@ -302,11 +304,11 @@
 
                     .wrapper-profile-section-container-two {
                         padding: 0;
-                        width: 65%;
                         @include clearfix;
                         @include media-up(sm) {
                             display: flex;
                             flex-direction: row;
+                            width: 65%;
                         }
 
                         &.is-hidden {
