Add marketing urls and other changes.

--- a/mitx/lms/static/sass/views/_about.scss
+++ b/mitx/lms/static/sass/views/_about.scss
@@ -4,7 +4,7 @@
 .page-banner {
     background-size: cover;
     background-position: 50% 50%;
-    margin-bottom: 25px;
+    margin-bottom: $baseline*1.25;
 
     .container {
         padding-top: 0;
@@ -22,11 +22,11 @@
 
     h1 {
         margin: 0;
-        font-weight: 300;
-        color: #fff;
+        color: $white;
         font-size: 40px;
         margin: 0 0 35px;
-        text-align: left;
+        letter-spacing: 0.4px;
+        @include text-align(left);
     }
 }
 
@@ -39,13 +39,38 @@
         }
 
         .text-1 {
-            font-size: 1.4rem;
-            font-weight: 500;
+            font-size: 18px;
+            letter-spacing: 0.5px;
+            margin-bottom: $baseline;
+            @include media-up(sm) {
+                font-size: 22px;
+                line-height: 36px;
+                margin-bottom: $baseline*2;
+            }
+        }
+    }
+
+    p {
+        font-size: 16px;
+        line-height: normal;
+        margin-bottom: $baseline;
+        @include media-up(sm) {
+            font-size: 18px;
+            line-height: 32px;
+            margin-bottom: $baseline*1.5;
+        }
+    }
+
+    a {
+        color: $secondary;
+
+        &:hover {
+        color: $primary;
         }
     }
 
     .socialmedia-area {
-        margin-left: auto;
+        @include margin-left(auto);
         @include media-up(sm) {
             flex: 0 0 40%;
         }
@@ -57,8 +82,7 @@
 
     h1 {
         font-size: 25px;
-        font-weight: 300;
-        text-align: left;
+        @include text-align(left);
     }
 }
 
@@ -66,8 +90,11 @@
 
     .item {
         .accordion-content {
-            padding-left: 21px;
-            p { margin: 0 0 25px; }
+            @include padding-left($baseline*1.05);
+
+            p {
+                margin: 0 0 $baseline*1.25;
+            }
         }
     }
 }
