--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -5,9 +5,10 @@
 <%block name="pagetitle">${_("About")}</%block>
 
 <section class="page-banner" style="background-image: url(https://placehold.it/1900x200);">
+
     <div class="container">
         <div class="row">
-            <div class="col"><h1>About MITx</h1></div>
+            <div class="col"><h1>About the MIT Open Learning Library</h1></div>
         </div>
     </div>
 </section>
@@ -16,11 +17,10 @@
     <section class="container about-block">
         <div class="row">
             <div class="about-content">
-                <div class="text-1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam tempora placeat voluptatibus, eligendi officia, in minima. Deserunt ducimus cum quidem ab, expedita iure voluptatibus assumenda beatae quibusdam harum nesciunt?</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, laboriosam. Quaerat voluptatem incidunt, ducimus similique. Corporis iusto, nam tempore deserunt dolor. Nemo ab magni, consequuntur sit officia molestias, fuga temporibus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate blanditiis, consequuntur aut beatae rerum cumque unde totam! Nam molestiae totam magni non libero, voluptate quos, blanditiis cumque itaque quaerat eaque!</p>
+                <p class="text-1">The MIT Open Learning Library is home to selected educational content from <a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OpenCourseWare</a> and <a href="https://www.edx.org/school/mitx" target="_blank">MITx</a> courses, available to anyone in the world at any time. All material is free to use. Some resources, particularly those from MIT OpenCourseWare, are free to download, remix, and reuse for non-commercial purposes.</p>
+                <p>MIT is committed to sharing learning materials with the world. The Open Learning Library provides additional opportunities to learn from MIT at your own pace, as on MIT OpenCourseWare, while engaging with problems and receiving instant feedback.</p>
+                <p>You will be able to keep track of your own progress in the course. The Open Learning Library does not include discussion forums, certificates, or the ability to transfer your progress to <a href="https://www.edx.org/" target="_blank">edX.org</a>. For those hoping to participate in a discussion or seeking a credential for completing a course, we will do our best to highlight when a credential-bearing offering is available on <a href="https://www.edx.org/" target="_blank">edX.org</a>.</p>
+                <p>You’ve discovered us during our prototype phase. We hope you’ll come along for this journey.  Over time, we will add new courses, develop site features, and enhance the user experience.  We welcome your feedback on the site, including your thoughts on areas for improvement.  Please email <a class="link-email" href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a> with your feedback or any requests for support.</p>
             </div>
             <div class="socialmedia-area">Social Icons</div>
         </div>
