--- a/mitx/lms/static/sass/views/_tos.scss
+++ b/mitx/lms/static/sass/views/_tos.scss
@@ -1,3 +1,64 @@
 // =================================
 // lms - views - Terms of Service
 // =================================
+.toc-block {
+	flex: 0 0 65%;
+	max-width: 65%;
+	margin-left: auto;
+
+	.toc-content {
+		font-size: 18px;
+		line-height: 32px;
+		letter-spacing: .5px;
+		margin-bottom: 20px;
+
+		a {
+			&:hover { color: $rouge; }
+		}
+	}
+
+	p { margin-bottom: 20px; }
+
+	h2 {
+		font-size: 20px;
+		line-height: 32px;
+		letter-spacing: .5px;
+		margin-bottom: 20px;
+		text-transform: uppercase;
+	}
+
+	.list-divided {
+
+		.item {
+			margin: 0;
+			padding: 0;
+
+			a {
+				padding: 0.625rem 0;
+				display: block;
+
+				&:hover {
+					background: darken($form-bg-color, 10%);
+					color: $rouge;
+				}
+			}
+		}
+	}
+
+	.list-bulleted {
+
+		.item {
+			line-height: 22px;
+			margin: 0 0 17px;
+		}
+	}
+}
+
+.toc-sidebar {
+	flex: 0 0 25%;
+	max-width: 25%;
+
+	.list-divided {
+		text-transform: capitalize;
+	}
+}
