--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -53,6 +53,15 @@ $danger:               	$tomato;
 $danger-light:          #f6e9eb;
 $success:               #008100;
 
+//
+// Social media
+//-------------------------------------------------------
+$facebook:                   #3B5998;
+$twitter:                    #00ACED;
+$linkedin:                   #007BB5;
+$google:                     #DD4B39;
+$instagram:                  #517FA4;
+
 // Misc.
 $border-radius:         4px;
 $container-default:     1170px;
