--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -26,13 +26,13 @@
           <li class="list-title">${_("MITx")}</li>
           <li><a href="${marketing_link('ABOUT')}">${_("About")}</a></li>
           <li><a href="${marketing_link('COURSES')}">${_("Courses")}</a></li>
-          <li><a href="${marketing_link('DONATE')}">${_("Donate")}</a></li>
-          <li><a href="mailto: mitoll-support@mit.edu">${_("Help")}</a></li>
+          <li><a target="_blank" href="${marketing_link('DONATE')}">${_("Donate")}</a></li>
+          <li><a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Help")}</a></li>
         </ol>
         <ul>
           <li class="list-title">${_("Connect")}</li>
           <li>
-            <a href="mailto: mitoll-support@mit.edu">${_("Contact")}</a>
+            <a href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">${_("Contact")}</a>
           </li>
           <li>
             <a href="https://twitter.com/mitopenlearning?lang=en" target="_blank">${_("Twitter")}</a>
