--- a/mitx/lms/templates/static_templates/privacy.html
+++ b/mitx/lms/templates/static_templates/privacy.html
@@ -68,7 +68,7 @@
                 <li class="item">For purposes described elsewhere in this Privacy Policy (including, e.g., sharing with third parties).</li>
                 <li class="item">As otherwise described to you at the point of collection or pursuant to your consent.</li>
               </ul>
-              <p>If you have concerns about any of these purposes, or about how MIT Open Learning Library communicates with you, please contact us at ?????????. MIT Open Learning Library will always respect a request by you to stop processing your personal information (subject to our legal obligations).</p>
+              <p>If you have concerns about any of these purposes, or about how MIT Open Learning Library communicates with you, please contact us at <a class="link-email" href="mailto:&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#109;&#105;&#116;&#111;&#108;&#108;&#045;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a>. MIT Open Learning Library will always respect a request by you to stop processing your personal information (subject to our legal obligations).</p>
               <a href="#" class="brand-link back-to-top">Back to top</a>
             </div>
 
