--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -78,8 +78,7 @@
                         <div class="item">
                             <div class="accordion-title">I’m interested in a MicroMasters program. Are these courses part of the Open Learning Library?</div>
                             <div class="accordion-content">
-                                <p>No. We are not offering any MicroMasters program content on the Open Learning Library. Please visit <a href="https://micromasters.mit.edu/" target="_blank">micromasters.mit.edu</a> for more information on our programs.
-                                Can I download material from Open Learning Library?</p>
+                                <p>No. We are not offering any MicroMasters program content on the Open Learning Library. Please visit <a href="https://micromasters.mit.edu/" target="_blank">micromasters.mit.edu</a> for more information on our programs.</p>
                             </div>
                         </div>
                         <div class="item">
