--- a/mitx/lms/static/sass/shared-v2/_footer.scss
+++ b/mitx/lms/static/sass/shared-v2/_footer.scss
@@ -22,6 +22,7 @@
             	margin: 0;
 
             	.nav-colophon {
+                    width: 100%;
             		@include margin(0, 0, $baseline*2, 0);
                     @include media-up(md) {
                         @include margin(0, 0, $baseline*4.5, 0);
@@ -35,6 +36,7 @@
                             min-width: $baseline*6.25;
                             vertical-align: top;
                             margin-bottom: 0;
+                            @include margin-right($baseline*2.5);
                         }
 
             			li {
