--- a/mitx/lms/static/sass/lms-main-v2.scss
+++ b/mitx/lms/static/sass/lms-main-v2.scss
@@ -48,6 +48,7 @@ $pattern-library-path: '../../edx-pattern-library' !default;
 @import 'views/login-register';
 @import 'views/tos';
 @import 'views/about';
+@import 'views/contact';
 @import 'views/privacy';
 
 // Features
