--- a/mitx/lms/templates/static_templates/about.html
+++ b/mitx/lms/templates/static_templates/about.html
@@ -7,7 +7,7 @@
 <section class="page-banner">
     <div class="container">
         <div class="row">
-            <div class="col"><h1>About the MIT Open Learning Library</h1></div>
+            <div class="col"><h1>${_("About the MIT Open Learning Library")}</h1></div>
         </div>
     </div>
 </section>
